cmake_minimum_required(VERSION 3.15)

project(OpenCvSharpExtern)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# remove MinSizeRel & RelWithDebInfo
SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FORCE)

# Feature options - must be defined before add_subdirectory
option(NO_CONTRIB "Disable all contrib features" OFF)
option(NO_STITCHING "Disable stitching bindings" OFF)
option(NO_CALIB3D "Disable 3D calibration bindings" OFF)
option(NO_VIDEO "Disable video bindings" OFF)
option(NO_FEATURES2D "Disable 2D feature bindings" OFF)
option(NO_FLANN "Disable FLANN bindings" OFF)
option(NO_DNN "Disable DNN bindings" OFF)
option(NO_ML "Disable ML bindings" OFF)
option(NO_OBJDETECT "Disable object detection bindings" OFF)
option(NO_PHOTO "Disable photo bindings" OFF)
option(NO_BARCODE "Disable barcode bindings" OFF)
option(NO_HIGHGUI "Disable highgui bindings" OFF)
option(NO_VIDEOIO "Disable videoio bindings" OFF)

# Convert options to compile definitions so C++ preprocessor can see them
if(NO_CONTRIB)
    add_compile_definitions(NO_CONTRIB)
endif()
if(NO_STITCHING)
    add_compile_definitions(NO_STITCHING)
endif()
if(NO_CALIB3D)
    add_compile_definitions(NO_CALIB3D)
endif()
if(NO_VIDEO)
    add_compile_definitions(NO_VIDEO)
endif()
if(NO_FEATURES2D)
    add_compile_definitions(NO_FEATURES2D)
endif()
if(NO_FLANN)
    add_compile_definitions(NO_FLANN)
endif()
if(NO_DNN)
    add_compile_definitions(NO_DNN)
endif()
if(NO_ML)
    add_compile_definitions(NO_ML)
endif()
if(NO_OBJDETECT)
    add_compile_definitions(NO_OBJDETECT)
endif()
if(NO_PHOTO)
    add_compile_definitions(NO_PHOTO)
endif()
if(NO_BARCODE)
    add_compile_definitions(NO_BARCODE)
endif()
if(NO_HIGHGUI)
    add_compile_definitions(NO_HIGHGUI)
endif()
if(NO_VIDEOIO)
    add_compile_definitions(NO_VIDEOIO)
endif()

add_subdirectory(OpenCvSharpExtern)
