cmake_minimum_required(VERSION 3.15)

project(OpenCvSharpExtern)

# OpenCV 5 requires C++17 at minimum; OpenCvSharpExtern targets C++20.
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# remove MinSizeRel & RelWithDebInfo
SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FORCE)

# Feature options - must be defined before add_subdirectory
option(NO_CONTRIB "Disable all contrib features" OFF)
option(NO_STITCHING "Disable stitching bindings" OFF)
option(NO_GEOMETRY "Disable geometry (ex-calib3d) bindings" OFF)
option(NO_CALIB "Disable camera calibration (ex-calib3d) bindings" OFF)
option(NO_STEREO "Disable stereo (ex-calib3d) bindings" OFF)
option(NO_PTCLOUD "Disable point cloud (ptcloud) bindings" OFF)
option(NO_VIDEO "Disable video bindings" OFF)
option(NO_FEATURES "Disable feature (features2d→features) bindings" OFF)
option(NO_FLANN "Disable FLANN bindings" OFF)
option(NO_DNN "Disable DNN bindings" OFF)
option(NO_ML "Disable ML bindings" OFF)
option(NO_OBJDETECT "Disable object detection bindings" OFF)
option(NO_PHOTO "Disable photo bindings" OFF)
option(NO_BARCODE "Disable barcode bindings" OFF)
option(NO_HIGHGUI "Disable highgui bindings" OFF)
option(NO_VIDEOIO "Disable videoio bindings" OFF)
option(NO_INSTALL_TO_TEST "Skip copying built DLL to the test project directory (Windows only)" OFF)

# Enable MSVC security hardening flags (issue #1841)
if(MSVC)
  add_compile_options(/guard:cf /GS)
  # /HIGHENTROPYVA: enable high-entropy 64-bit ASLR
  add_link_options(/guard:cf /DYNAMICBASE /HIGHENTROPYVA)
endif()

# Convert options to compile definitions so C++ preprocessor can see them
if(NO_CONTRIB)
    add_compile_definitions(NO_CONTRIB)
endif()
if(NO_STITCHING)
    add_compile_definitions(NO_STITCHING)
endif()
if(NO_GEOMETRY)
    add_compile_definitions(NO_GEOMETRY)
endif()
if(NO_CALIB)
    add_compile_definitions(NO_CALIB)
endif()
if(NO_STEREO)
    add_compile_definitions(NO_STEREO)
endif()
if(NO_PTCLOUD)
    add_compile_definitions(NO_PTCLOUD)
endif()
if(NO_VIDEO)
    add_compile_definitions(NO_VIDEO)
endif()
if(NO_FEATURES)
    add_compile_definitions(NO_FEATURES)
endif()
if(NO_FLANN)
    add_compile_definitions(NO_FLANN)
endif()
if(NO_DNN)
    add_compile_definitions(NO_DNN)
endif()
if(NO_ML)
    add_compile_definitions(NO_ML)
endif()
if(NO_OBJDETECT)
    add_compile_definitions(NO_OBJDETECT)
endif()
if(NO_PHOTO)
    add_compile_definitions(NO_PHOTO)
endif()
if(NO_BARCODE)
    add_compile_definitions(NO_BARCODE)
endif()
if(NO_HIGHGUI)
    add_compile_definitions(NO_HIGHGUI)
endif()
if(NO_VIDEOIO)
    add_compile_definitions(NO_VIDEOIO)
endif()

add_subdirectory(OpenCvSharpExtern)
